--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "webpack serve --mode development --open",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
