--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,8 +1,15 @@
 # pyproject.toml
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "fastapi-backend"
 version = "0.1.0"
+description = "FastAPI 백엔드 서비스"
+requires-python = ">=3.8"
 dependencies = [
-    "fastapi",
-    "uvicorn[standard]"
+    "fastapi>=0.104.0",
+    "uvicorn[standard]>=0.23.2",
+    "pydantic>=2.4.2"
 ]
