--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,7 @@ services:
       - /app/node_modules
     ports:
       - "8080:8080"
+    environment:
+      - WATCHPACK_POLLING=true
     depends_on:
       - backend
