--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,6 @@ WORKDIR /app
 COPY pyproject.toml .
 
 # 필요한 패키지 직접 설치
-RUN pip install --no-cache-dir fastapi>=0.104.0 uvicorn[standard]>=0.23.2 pydantic>=2.4.2
+RUN pip install --no-cache-dir fastapi>=0.104.0 uvicorn[standard]>=0.23.2 pydantic>=2.4.2 debugpy>=1.6.0
 
 COPY . .
-
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
