--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,5 +16,8 @@ dependencies = [
     "psycopg2-binary>=2.9.9",
     "passlib[bcrypt]>=1.7.4",
     "email-validator>=2.1.0",
-    "python-dotenv>=1.0.0"
+    "python-dotenv>=1.0.0",
+    "google-auth>=2.23.0",
+    "google-auth-oauthlib>=1.1.0",
+    "google-api-python-client>=2.100.0"
 ]
