--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3"
